--- a/paper-pulp/index.html
+++ b/paper-pulp/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Valentina Chavez Art Portfolio: Homepage</title>
+	<title>Valentina Chavez Art Portfolio: Paper Pulp</title>
 
     	<!-- <link href="./images/favicon.ico" rel="icon"> -->
     	<!-- <link href="./portfolio.css" rel="stylesheet"> -->
@@ -25,7 +25,8 @@
 
 <header>
 	<div class="header">
-		<h1>Valentina Chavez Art Portfolio: Homepage</h1>
+		<h1>Valentina Chavez Art Portfolio: Paper Pulp</h1>
+		<a href="../index.html">back to homepage</a>
 		<hr/>
 	</div>
 </header>
@@ -33,19 +34,19 @@
 <main>
 	<div class="row">
 		<div class="col">
-			<h2>Hello!</h2>
+			<h2>Section Text</h2>
 		</div>
 	</div>
     <div class="row">
 		<div class="col">
-			<h4>Sections</h4>
-            		- <a href="./paintings/index.html">Paintings</a>
+			<h4>Other Sections</h4>
+            		- <a href="../paintings/index.html">Paintings</a>
             		<br><br>
-            		- <a href="./works-on-paper-and-prints/index.html">Works on Paper & Prints</a>
+            		- <a href="../works-on-paper-and-prints/index.html">Works on Paper & Prints</a>
             		<br><br>
-            		- <a href="./paper-pulp/index.html">Paper Pulp</a>
-            		<br><br>
-            		- <a href="./nikon-coolpix-4600/index.html">Nikon Coolpix 4600</a>
+            		<!-- - <a href="../paper-pulp/index.html">Paper Pulp</a> -->
+            		<!-- <br><br> -->
+            		- <a href="../nikon-coolpix-4600/index.html">Nikon Coolpix 4600</a>
             		<br><br>
 		</div>
 	</div>
