--- a/works-on-paper-and-prints/index.html
+++ b/works-on-paper-and-prints/index.html
@@ -40,6 +40,8 @@
     <div class="row">
 		<div class="col">
 			<h4>Other Sections</h4>
+            		- <a href="./about/index.html">About</a>
+            		<br><br>
             		- <a href="../paintings/index.html">Paintings</a>
             		<br><br>
             		<!-- - <a href="../works-on-paper-and-prints/index.html">Works on Paper & Prints</a> -->
