--- a/paintings/index.html
+++ b/paintings/index.html
@@ -40,7 +40,7 @@
     <div class="row">
 		<div class="col">
 			<h4>Other Sections</h4>
-            		- <a href="./about/index.html">About</a>
+            		- <a href="../about/index.html">About</a>
             		<br><br>
             		<!-- - <a href="../paintings/index.html">Paintings</a> -->
             		<!-- <br><br> -->
