fix about title oops

--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Valentina Chavez Art Portfolio: Nikon Coolpix 4600</title>
+	<title>Valentina Chavez Art Portfolio: About</title>
 
     	<!-- <link href="./images/favicon.ico" rel="icon"> -->
     	<!-- <link href="./portfolio.css" rel="stylesheet"> -->
@@ -25,7 +25,7 @@
 
 <header>
 	<div class="header">
-		<h1>Valentina Chavez Art Portfolio: Nikon Coolpix 4600</h1>
+		<h1>Valentina Chavez Art Portfolio: About</h1>
 		<a href="../index.html">back to homepage</a>
 		<hr/>
 	</div>
